# detection_models_on_fisheye

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yaml  main.yaml
src/app/: ModelPredict.py  ModelPredictor.py  Visualizer.py  app.py  draw_ultralytics_polygons_from_file.py  load_model.py  main.py
src/app/core/: load_model.py  load_parser.py  predictor.py  processor_image.py
src/app/utils/: constants.py
src/app/visualization/: create_annotation.py  draw_polygons.py  visualizer.py
src/datasets/WoodScape/: class_info.json
src/mAP/: compute_mAP.py
src/models/research_test/: SSD.ipynb  YOLOv4.ipynb
src/models/train/: convert.py  split_dataset.py  train_config.py
src/models/train/notebooks/: download_WoodScape.ipynb  rt-detr.ipynb  yolo11.ipynb  yolo8.ipynb  yolov8.ipynb
src/models/train/notebooks/configs/: rtdetr_config.yaml  yolo11_config.yaml  yolo8_config.yaml
src/models_notebooks/: YOLOv4.ipynb
