[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["xImoZA <alekcandra.ri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
