[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["xImoZA <alekcandra.ri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.8"
pre-commit = "^4.2.0"
types-pyyaml = "^6.0.12.20250402"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
